syntax = "proto3";

option java_multiple_files = true;
option java_package = "horgan.UserDownloadServer";
option java_outer_classname = "UserDownloadServerProto";
package userdownloadserver;

// The user service definition.
service UserDownloadServer {
    // check if a user can download a given game
    rpc DownloadGame (DownloadRequest) returns (DownloadResponse) {}

    // return a list of purchased games for a given user
    rpc AvailableDownloads (UserDownloadListRequest) returns (DownloadsList) {}
}

// The request query containing the username and game id to see if a user can download a game
message DownloadRequest {
    string username = 1;
    string password = 2;
    string gameId = 3;
}

// The response message containing either the download URL or error
message DownloadResponse {
    bool available = 1;
    optional string S3DownloadLink = 2;
}

// per username give a list of games that the user can download
message UserDownloadListRequest {
    string username = 1;
}

message GameDetails {
    string id = 1;
    string title = 2;
    string console = 3;
    string releaseDate = 4;
    string developer = 5;
    string publisher = 6;
    string genre = 7;
    int32 players = 8;
}

message DownloadsList {
    repeated GameDetails games = 1;
}